--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -43,7 +43,7 @@ registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
   server: ghcr.io
-  username: nerdinand
+  username: margarita2104
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
