--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -53,6 +53,10 @@ registry:
 builder:
   arch: amd64
 
+env:
+  secret:
+    - RAILS_MASTER_KEY
+
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
 # env:
