--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -24,6 +24,7 @@ env:
 
 volumes:
   - "swissitize_app_storage:/rails/storage"
+  # - "swissitize_public_assets:/rails/public/assets"
 
 asset_path: /rails/public/assets
 
