--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -4,6 +4,18 @@ image: margarita2104/swissitize
 servers:
   web:
     - 116.203.85.111
+    - healthcheck:
+        port: 3000
+        path: /up  # Change from /health to /up
+        interval: 10s
+        timeout: 5s
+        start_period: 30s
+
+traefik:
+  options:
+    # Increase health check parameters
+    health_check_interval: 10s
+    health_check_timeout: 5s
 
 proxy:
   ssl: true
