--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -4,12 +4,12 @@ image: margarita2104/swissitize
 servers:
   web:
     - 116.203.85.111
-  healthcheck:
-    port: 3000
-    path: /up
-    interval: 10s
-    timeout: 5s
-    start_period: 30s
+    healthcheck:
+      command: curl -f http://localhost:3000/up
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
 
 proxy:
   ssl: true
