--- a/config/database.yml
+++ b/config/database.yml
@@ -29,4 +29,4 @@ test:
 # ensure the database is located in a persisted volume.
 production:
   <<: *default
-  database: /rails/storage/production.sqlite3
+  database: <%= ENV.fetch("SQLITE_DATABASE_PATH", "db/production.sqlite3") 
