--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,5 +1,6 @@
 service: swissitize
 image: margarita2104/swissitize
+
 servers:
   web:
     - 116.203.85.111
@@ -28,6 +29,8 @@ volumes:
 
 asset_path: /rails/public/assets
 
-healthcheck:
-  max_attempts: 10  # Add this to give more time for db setup
-  interval: 5s      # Check every 5 seconds
+aliases:
+  console: app exec --interactive --reuse "bin/rails console"
+  shell: app exec --interactive --reuse "bash"
+  logs: app logs -f
+  dbc: app exec --interactive --reuse "bin/rails dbconsole"
