--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,11 +23,10 @@ volumes:
   - "swissitize_db:/rails/db"
   - "swissitize_storage:/rails/storage"
 asset_path: /rails/public/assets
-# Added this section for automatic migrations
-on:
-  deploy:
-    - command: rails db:migrate
-      host: web[0]
+# Fixed the on_deploy section syntax
+on_deploy:
+  - command: rails db:migrate
+    host: web[0]
 aliases:
   console: app exec --interactive --reuse "bin/rails console"
   shell: app exec --interactive --reuse "bash"
